new design added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -196,7 +196,7 @@
 								<nav class="navbar-default">
 										<div class="navigation">
 												<ul>
-												  <li class="has-sub"> 
+												  <li class="has-sub firstli"> 
 													  <a href="JavaScript:void(0);">&#9776;  All Categories</a>
 													<ul>
 													  <li class="has-sub"> <a href="JavaScript:void(0);"><span>Product &amp; Sectors</span></a>
