--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -91,24 +91,6 @@
 										<span *ngIf="spec.Name == 'Available sizes'"><label class="control-label">Available sizes</label> {{spec.Value}}</span>
 									</div>
 									
-									<div class="box-checkbox form-group required">
-										<label class="control-label">Checkbox</label>
-										<div id="input-option232">
-											<div class="checkbox">
-												<label for="checkbox_1"><input type="checkbox" name="option[232][]" value="36" id="checkbox_1"> Checkbox 1 (+$12.00)</label>
-											</div>
-											<div class="checkbox">
-												<label for="checkbox_2"><input type="checkbox" name="option[232][]" value="36" id="checkbox_2"> Checkbox 2 (+$36.00)</label>
-											</div>
-											<div class="checkbox">
-												<label for="checkbox_3"><input type="checkbox" name="option[232][]" value="36" id="checkbox_3"> Checkbox 3 (+$24.00)</label>
-											</div>
-											<div class="checkbox">
-												<label for="checkbox_4"><input type="checkbox" name="option[232][]" value="36" id="checkbox_4"> Checkbox 4 (+$48.00)</label>
-											</div>
-										</div>
-									</div>
-
 									<div class="form-group box-info-product">
 										<div class="option quantity">
 											<div class="input-group quantity-control" unselectable="on" style="-webkit-user-select: none;">
@@ -139,6 +121,23 @@
 										</div>
 
 									</div>
+									<!-- <div class="box-checkbox form-group required">
+										<label class="control-label">Checkbox</label>
+										<div id="input-option232">
+											<div class="checkbox">
+												<label for="checkbox_1"><input type="checkbox" name="option[232][]" value="36" id="checkbox_1"> Checkbox 1 (+$12.00)</label>
+											</div>
+											<div class="checkbox">
+												<label for="checkbox_2"><input type="checkbox" name="option[232][]" value="36" id="checkbox_2"> Checkbox 2 (+$36.00)</label>
+											</div>
+											<div class="checkbox">
+												<label for="checkbox_3"><input type="checkbox" name="option[232][]" value="36" id="checkbox_3"> Checkbox 3 (+$24.00)</label>
+											</div>
+											<div class="checkbox">
+												<label for="checkbox_4"><input type="checkbox" name="option[232][]" value="36" id="checkbox_4"> Checkbox 4 (+$48.00)</label>
+											</div>
+										</div>
+									</div> -->
 
 								</div>
 								<!-- end box info product -->
@@ -147,7 +146,7 @@
 						</div>
 					</div>
 					
-					<section class="col-lg-2 hidden-sm hidden-md hidden-xs slider-products">
+					<!-- <section class="col-lg-2 hidden-sm hidden-md hidden-xs slider-products">
 						<div class="module col-sm-12 four-block">
 							<div class="modcontent clearfix">
 								<div class="policy-detail">
@@ -169,7 +168,7 @@
 								</div>
 							</div>
 						</div>
-					</section>
+					</section> -->
 				</div>
 				
 				<!-- Product Tabs -->
@@ -183,7 +182,8 @@
 		</ul>
 		<div class="tab-content col-lg-10 col-sm-9 col-xs-12">
 			<div id="tab-1" class="tab-pane fade active in">
-				<p>
+				<p>Data is not Available, Right Now</p>
+				<!-- <p>
 					The 30-inch Apple Cinema HD Display delivers an amazing 2560 x 1600 pixel resolution. Designed specifically for the creative professional, this display provides more space for easier access to all the tools and palettes needed to edit, format and composite your work. Combine this display with a Mac Pro, MacBook Pro, or PowerMac G5 and there's no limit to what you can achieve. <br>
 					<br>
 					The Cinema HD features an active-matrix liquid crystal display that produces flicker-free images that deliver twice the brightness, twice the sharpness and twice the contrast ratio of a typical CRT display. Unlike other flat panels, it's designed with a pure digital interface to deliver distortion-free images that never need adjusting. With over 4 million digital pixels, the display is uniquely suited for scientific and technical applications such as visualizing molecular structures or analyzing geological data. <br>
@@ -432,7 +432,7 @@
 						PowerBook G4 with dual-link DVI support</li>
 					<li>
 						Windows PC and graphics card that supports DVI ports with dual-link digital bandwidth and VESA DDC standard for plug-and-play setup</li>
-				</ul>
+				</ul> -->
 
 				
 			</div>
@@ -495,38 +495,7 @@
 				<a href="JavaScript:void(0);">Apple</a>				
 			</div>
 			<div id="tab-5" class="tab-pane fade">
-				<h3 class="custom-color">Take a trivial example which of us ever undertakes</h3>
-				<p>Lorem ipsum dolor sit amet, consetetur
-					sadipscing elitr, sed diam nonumy eirmod
-					tempor invidunt ut labore et dolore
-					magna aliquyam erat, sed diam voluptua.
-					At vero eos et accusam et justo duo
-					dolores et ea rebum. Stet clita kasd
-					gubergren, no sea takimata sanctus est
-					Lorem ipsum dolor sit amet. Lorem ipsum
-					dolor sit amet, consetetur sadipscing
-					elitr, sed diam nonumy eirmod tempor
-					invidunt ut labore et dolore magna aliquyam
-					erat, sed diam voluptua. </p>
-				<p>At vero eos et accusam et justo duo dolores
-					et ea rebum. Stet clita kasd gubergren,
-					no sea takimata sanctus est Lorem ipsum
-					dolor sit amet. Lorem ipsum dolor sit
-					amet, consetetur sadipscing elitr.</p>
-					<ul class="marker-simple-list two-columns">
-<li>Nam liberempore</li>
-<li>Cumsoluta nobisest</li>
-<li>Eligendptio cumque</li>
-<li>Nam liberempore</li>
-<li>Cumsoluta nobisest</li>
-<li>Eligendptio cumque</li>
-</ul>
-				<p>Sed diam nonumy eirmod tempor invidunt
-					ut labore et dolore magna aliquyam erat,
-					sed diam voluptua. At vero eos et accusam
-					et justo duo dolores et ea rebum. Stet
-					clita kasd gubergren, no sea takimata
-					sanctus est Lorem ipsum dolor sit amet.</p>
+					<p>Data is not Available, Right Now</p>
 			</div>
 		</div>
 	</div>
@@ -534,200 +503,7 @@
 				<!-- //Product Tabs -->
 				
 				<!-- Related Products -->
-				<div class="related titleLine products-list grid module ">
-	<h3 class="modtitle">Related Products  </h3>
-	<div class="releate-products ">
-		<div class="product-layout">
-			<div class="product-item-container">
-				<div class="left-block">
-					<div class="product-image-container second_img ">
-						<img  src="assets/image/demo/shop/product/e11.jpg"  title="Apple Cinema 30&quot;" class="img-responsive" />
-						<img  src="assets/image/demo/shop/product/e12.jpg"  title="Apple Cinema 30&quot;" class="img_0 img-responsive" />
-					</div>
-					<!--Sale Label-->
-					<span class="label label-sale">Sale</span>
-					<!--full quick view block-->
-					<a class="quickview iframe-link visible-lg" data-fancybox-type="iframe"  href="quickview.html">  Quickview</a>
-					<!--end full quick view block-->
-				</div>
 				
-				
-				<div class="right-block">
-					<div class="caption">
-						<h4><a href="product.html">Apple Cinema 30&quot;</a></h4>		
-						<div class="ratings">
-							<div class="rating-box">
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span>
-							</div>
-						</div>
-											
-						<div class="price">
-							<span class="price-new">$74.00</span> 
-							<span class="price-old">$122.00</span>		 
-							<span class="label label-percent">-40%</span>    
-						</div>
-						<div class="description item-desc hidden">
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut l..</p>
-						</div>
-					</div>
-					
-					  <div class="button-group">
-						<button class="addToCart" type="button" data-toggle="tooltip" title="Add to Cart" onclick="cart.add('42', '1');"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs">Add to Cart</span></button>
-						<button class="wishlist" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('42');"><i class="fa fa-heart"></i></button>
-						<button class="compare" type="button" data-toggle="tooltip" title="Compare this Product" onclick="compare.add('42');"><i class="fa fa-exchange"></i></button>
-					  </div>
-				</div><!-- right block -->
-
-			</div>
-		</div>
-		<div class="product-layout ">
-			<div class="product-item-container">
-				<div class="left-block">
-					<div class="product-image-container second_img ">
-						<img  src="assets/image/demo/shop/product/11.jpg"  title="Apple Cinema 30&quot;" class="img-responsive" />
-						<img  src="assets/image/demo/shop/product/10.jpg"  title="Apple Cinema 30&quot;" class="img_0 img-responsive" />
-						
-					</div>
-					<!--Sale Label-->
-					<span class="label label-sale">Sale</span>
-					<!--full quick view block-->
-					<a class="quickview iframe-link visible-lg" data-fancybox-type="iframe"  href="quickview.html">  Quickview</a>
-					<!--end full quick view block-->
-				</div>
-				
-				
-				<div class="right-block">
-					<div class="caption">
-						<h4><a href="product.html">Apple Cinema 30&quot;</a></h4>		
-						<div class="ratings">
-							<div class="rating-box">
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span>
-							</div>
-						</div>
-											
-						<div class="price">
-							<span class="price-new">$74.00</span> 
-							<span class="price-old">$122.00</span>		 
-							<span class="label label-percent">-40%</span>    
-						</div>
-						<div class="description item-desc hidden">
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut l..</p>
-						</div>
-					</div>
-					
-					  <div class="button-group">
-						<button class="addToCart" type="button" data-toggle="tooltip" title="Add to Cart" onclick="cart.add('42', '1');"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs">Add to Cart</span></button>
-						<button class="wishlist" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('42');"><i class="fa fa-heart"></i></button>
-						<button class="compare" type="button" data-toggle="tooltip" title="Compare this Product" onclick="compare.add('42');"><i class="fa fa-exchange"></i></button>
-					  </div>
-				</div><!-- right block -->
-
-			</div>
-		</div>
-		<div class="product-layout ">
-			<div class="product-item-container">
-				<div class="left-block">
-					<div class="product-image-container second_img ">
-						<img  src="assets/image/demo/shop/product/35.jpg"  title="Apple Cinema 30&quot;" class="img-responsive" />
-						<img  src="assets/image/demo/shop/product/34.jpg"  title="Apple Cinema 30&quot;" class="img_0 img-responsive" />
-					</div>
-					<!--Sale Label-->
-					<span class="label label-sale">Sale</span>
-					<!--full quick view block-->
-					<a class="quickview iframe-link visible-lg" data-fancybox-type="iframe"  href="quickview.html">  Quickview</a>
-					<!--end full quick view block-->
-				</div>
-				
-				
-				<div class="right-block">
-					<div class="caption">
-						<h4><a href="product.html">Apple Cinema 30&quot;</a></h4>		
-						<div class="ratings">
-							<div class="rating-box">
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span>
-							</div>
-						</div>
-											
-						<div class="price">
-							<span class="price-new">$74.00</span> 
-							<span class="price-old">$122.00</span>		 
-							<span class="label label-percent">-40%</span>    
-						</div>
-						<div class="description item-desc hidden">
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut l..</p>
-						</div>
-					</div>
-					
-					  <div class="button-group">
-						<button class="addToCart" type="button" data-toggle="tooltip" title="Add to Cart" onclick="cart.add('42', '1');"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs">Add to Cart</span></button>
-						<button class="wishlist" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('42');"><i class="fa fa-heart"></i></button>
-						<button class="compare" type="button" data-toggle="tooltip" title="Compare this Product" onclick="compare.add('42');"><i class="fa fa-exchange"></i></button>
-					  </div>
-				</div><!-- right block -->
-
-			</div>
-		</div>
-		<div class="product-layout ">
-			<div class="product-item-container">
-				<div class="left-block">
-					<div class="product-image-container second_img ">
-						<img  src="assets/image/demo/shop/product/14.jpg"  title="Apple Cinema 30&quot;" class="img-responsive" />
-						<img  src="assets/image/demo/shop/product/15.jpg"  title="Apple Cinema 30&quot;" class="img_0 img-responsive" />
-					</div>
-					<!--Sale Label-->
-					<span class="label label-sale">Sale</span>
-					<!--full quick view block-->
-					<a class="quickview iframe-link visible-lg" data-fancybox-type="iframe"  href="quickview.html">  Quickview</a>
-					<!--end full quick view block-->
-				</div>
-				
-				
-				<div class="right-block">
-					<div class="caption">
-						<h4><a href="product.html">Apple Cinema 30&quot;</a></h4>		
-						<div class="ratings">
-							<div class="rating-box">
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
-								<span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span>
-							</div>
-						</div>
-											
-						<div class="price">
-							<span class="price-new">$74.00</span> 
-							<span class="price-old">$122.00</span>		 
-							<span class="label label-percent">-40%</span>    
-						</div>
-						<div class="description item-desc hidden">
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut l..</p>
-						</div>
-					</div>
-					
-					  <div class="button-group">
-						<button class="addToCart" type="button" data-toggle="tooltip" title="Add to Cart" onclick="cart.add('42', '1');"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs">Add to Cart</span></button>
-						<button class="wishlist" type="button" data-toggle="tooltip" title="Add to Wish List" onclick="wishlist.add('42');"><i class="fa fa-heart"></i></button>
-						<button class="compare" type="button" data-toggle="tooltip" title="Compare this Product" onclick="compare.add('42');"><i class="fa fa-exchange"></i></button>
-					  </div>
-				</div><!-- right block -->
-
-			</div>
-		</div>
-	</div>
-</div>
 
 			<!-- end Related  Products-->
 			
