--- a/src/app/home3/home3.component.css
+++ b/src/app/home3/home3.component.css
@@ -32,7 +32,25 @@
 	opacity: 0;
 	transition: opacity .35s ease;
   }
+  .buttonimgRibbon {
+	position: absolute;
+	width: 500px;
+	left: 30%;
+	top: 180px;
+	text-align: center;
+	opacity: 0;
+	transition: opacity .35s ease;
+  }
   
+  .buttonimgRibbon a {
+	width: 200px;
+	padding: 12px 48px;
+	text-align: center;
+	color: #fff;
+	border: solid 2px #444;
+	background: #000;
+	z-index: 1;
+  }
   .buttonimg a {
 	width: 200px;
 	padding: 12px 48px;
@@ -44,6 +62,10 @@
   }
   
   .thumb-wrapper:hover .buttonimg {
+	opacity: 1;
+	text-align: center;
+  }
+  .thumb-wrapper:hover .buttonimgRibbon {
 	opacity: 1;
 	text-align: center;
   }
@@ -268,6 +290,7 @@ padding-left: 15px;
 	   width:30%;
 	   margin-top:55px;
 	 }
+	 
 }
 
 .cookie{
