--- a/src/app/home3/home3.component.css
+++ b/src/app/home3/home3.component.css
@@ -189,7 +189,7 @@ h3::after {
     background-color: #fff;
     background-clip: border-box;
     border: 1px solid rgba(0,0,0,.125);
-    border-radius: .25rem;
+    border-radius: 5%;
 }
 .carousel .thumb-content {
 	padding: 15px;
