--- a/src/assets/css/slicktheme/slick-theme.css
+++ b/src/assets/css/slicktheme/slick-theme.css
@@ -187,7 +187,7 @@
     text-align: center;
 
     opacity: .25;
-    color: black;
+    color: #C98B63;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -195,5 +195,5 @@
 .slick-dots li.slick-active button:before
 {
     opacity: .75;
-    color: black;
+    color: #C98B63;
 }
